intial commit of branch moritz

--- a/project/00-project-start.ipynb
+++ b/project/00-project-start.ipynb
@@ -7,12 +7,11 @@
    "source": [
     "# Project: PROJEKTNAME\n",
     "\n",
-    "Semester: ...\n",
+    "Semester: 1, Master DPT\n",
     "\n",
     "Teilnehmer:\n",
-    "- TBD\n",
-    "- TBD\n",
-    "- TBD"
+    "- Denny Redel\n",
+    "- Moritz Schwarz"
    ]
   },
   {
@@ -20,11 +19,45 @@
    "id": "2cd10873",
    "metadata": {},
    "source": []
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-20T12:57:27.012934Z",
+     "start_time": "2025-10-20T12:57:27.002993Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(\"hello world\")",
+   "id": "29fed4d863cf4ff1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "40f9cb17067c3439"
   }
  ],
  "metadata": {
   "language_info": {
    "name": "python"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
