Mindestanforderungen1.ipynb bearbeitet 15-pandas-intro.ipynb bearbeitet

--- a/data-understanding-uebungen/10-numpy.ipynb
+++ b/data-understanding-uebungen/10-numpy.ipynb
@@ -30,8 +30,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:31:10.669043Z",
-     "start_time": "2025-10-12T12:31:10.234566Z"
+     "end_time": "2025-10-30T15:33:05.467093Z",
+     "start_time": "2025-10-30T15:33:05.449307Z"
     }
    },
    "source": [
@@ -64,7 +64,7 @@
     "          [\"Tokyo\", 139.75, 35.66666667, 1872, \"Japan\", 4770864]])\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -77,26 +77,39 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:34:43.075585Z",
-     "start_time": "2025-10-12T12:34:43.067931Z"
+     "end_time": "2025-10-30T15:33:05.485912Z",
+     "start_time": "2025-10-30T15:33:05.478882Z"
     }
    },
-   "source": [
-    "cities.shape"
-   ],
+   "source": "print(cities)",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(19, 6)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Stockholm' '18.05' '59.28333333' '1919' 'Sweden' '132897']\n",
+      " ['Sydney' '151.2' '-33.866667' '1858' 'Australia' '355001']\n",
+      " ['Singapore' '103.833333' '1.283333' '1932' 'Singapore' '270996']\n",
+      " ['Vienna' '16.33333333' '48.23333333' '1978' 'Austria' '84970']\n",
+      " ['Bilbao' '-2.953333' '43.262222' '1887' 'Spain' '37105']\n",
+      " ['Montpellier' '3.869985716' '43.61039878' '1996' 'France' '98675']\n",
+      " ['Istanbul' '28.955' '41.013611' '1989' 'Turkey' '38096']\n",
+      " ['Seoul' '126.977966' '37.566536' '1971' 'South Korea' '1418234']\n",
+      " ['Chicago' '-87.61666667' '41.83333333' '1892' 'United States' '176958']\n",
+      " ['Cincinnati' '-84.5' '39.13333333' '1920' 'United States' '31236']\n",
+      " ['Dallas' '-96.76666667' '32.76666667' '1989' 'United States' '125699']\n",
+      " ['Denver' '-105' '39.75' '1994' 'United States' '174131']\n",
+      " ['Los Angeles' '-118.25' '34.05' '2017' 'United States' '140077']\n",
+      " ['Mexico City' '-99.11666667' '19.43333333' '1967' 'Mexico' '446306']\n",
+      " ['Munich' '11.58333333' '48.13333333' '2017' 'Germany' '176735']\n",
+      " ['Naples' '14.25' '40.83333333' '1976' 'Italy' '22320']\n",
+      " ['Madrid' '-3.7' '40.43333333' '1869' 'Spain' '577574']\n",
+      " ['London' '-0.08333333333' '51.53333333' '1833' 'England' '1663529']\n",
+      " ['Tokyo' '139.75' '35.66666667' '1872' 'Japan' '4770864']]\n"
+     ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -109,8 +122,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:34:47.205080Z",
-     "start_time": "2025-10-12T12:34:47.201115Z"
+     "end_time": "2025-10-30T15:33:05.519758Z",
+     "start_time": "2025-10-30T15:33:05.510595Z"
     }
    },
    "source": [
@@ -123,12 +136,12 @@
        "114"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -141,8 +154,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:34:49.233912Z",
-     "start_time": "2025-10-12T12:34:49.229093Z"
+     "end_time": "2025-10-30T15:33:05.555309Z",
+     "start_time": "2025-10-30T15:33:05.549265Z"
     }
    },
    "source": [
@@ -155,12 +168,12 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -175,8 +188,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:34:56.008406Z",
-     "start_time": "2025-10-12T12:34:56.004775Z"
+     "end_time": "2025-10-30T15:33:05.588530Z",
+     "start_time": "2025-10-30T15:33:05.582509Z"
     }
    },
    "source": [
@@ -198,14 +211,14 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:35:14.977740Z",
-     "start_time": "2025-10-12T12:35:14.973745Z"
+     "end_time": "2025-10-30T15:33:05.616623Z",
+     "start_time": "2025-10-30T15:33:05.610387Z"
     }
    },
    "source": [
@@ -225,14 +238,14 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:35:46.703235Z",
-     "start_time": "2025-10-12T12:35:46.699533Z"
+     "end_time": "2025-10-30T15:33:05.632640Z",
+     "start_time": "2025-10-30T15:33:05.626726Z"
     }
    },
    "source": [
@@ -250,14 +263,14 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:36:12.755964Z",
-     "start_time": "2025-10-12T12:36:12.752412Z"
+     "end_time": "2025-10-30T15:33:05.672575Z",
+     "start_time": "2025-10-30T15:33:05.666324Z"
     }
    },
    "source": [
@@ -291,7 +304,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -306,8 +319,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:41:09.338216Z",
-     "start_time": "2025-10-12T12:41:09.334404Z"
+     "end_time": "2025-10-30T15:33:05.703187Z",
+     "start_time": "2025-10-30T15:33:05.697638Z"
     }
    },
    "source": "print(cities[:, 1:3])",
@@ -338,7 +351,7 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -362,8 +375,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:39:00.553370Z",
-     "start_time": "2025-10-12T12:39:00.549187Z"
+     "end_time": "2025-10-30T15:33:05.733003Z",
+     "start_time": "2025-10-30T15:33:05.725267Z"
     }
    },
    "source": [
@@ -382,7 +395,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -395,8 +408,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:41:13.870050Z",
-     "start_time": "2025-10-12T12:41:13.866206Z"
+     "end_time": "2025-10-30T15:33:05.748964Z",
+     "start_time": "2025-10-30T15:33:05.742250Z"
     }
    },
    "source": [
@@ -407,7 +420,7 @@
     "lengths = cities[:,5].astype(np.float64)"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -420,8 +433,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:41:28.501855Z",
-     "start_time": "2025-10-12T12:41:28.497796Z"
+     "end_time": "2025-10-30T15:33:05.771106Z",
+     "start_time": "2025-10-30T15:33:05.764861Z"
     }
    },
    "source": [
@@ -438,7 +451,7 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -457,8 +470,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:42:16.179129Z",
-     "start_time": "2025-10-12T12:42:16.173114Z"
+     "end_time": "2025-10-30T15:33:05.805502Z",
+     "start_time": "2025-10-30T15:33:05.796267Z"
     }
    },
    "source": [
@@ -473,19 +486,19 @@
        "array([2, 4, 6, 8])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:42:21.370568Z",
-     "start_time": "2025-10-12T12:42:21.365527Z"
+     "end_time": "2025-10-30T15:33:05.835229Z",
+     "start_time": "2025-10-30T15:33:05.828268Z"
     }
    },
    "source": [
@@ -498,19 +511,19 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:42:29.195053Z",
-     "start_time": "2025-10-12T12:42:29.190419Z"
+     "end_time": "2025-10-30T15:33:05.852841Z",
+     "start_time": "2025-10-30T15:33:05.845248Z"
     }
    },
    "source": [
@@ -525,19 +538,19 @@
        "array([10, 10, 10, 10])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 20
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:42:49.467418Z",
-     "start_time": "2025-10-12T12:42:49.462599Z"
+     "end_time": "2025-10-30T15:33:05.880811Z",
+     "start_time": "2025-10-30T15:33:05.871350Z"
     }
    },
    "source": [
@@ -553,12 +566,12 @@
        "array([ 32.,  68., 104., 212.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -571,8 +584,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:43:46.843577Z",
-     "start_time": "2025-10-12T12:43:46.839197Z"
+     "end_time": "2025-10-30T15:33:05.920507Z",
+     "start_time": "2025-10-30T15:33:05.913967Z"
     }
    },
    "source": [
@@ -585,19 +598,19 @@
        "np.int64(10)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 22
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:43:56.935632Z",
-     "start_time": "2025-10-12T12:43:56.931405Z"
+     "end_time": "2025-10-30T15:33:05.958214Z",
+     "start_time": "2025-10-30T15:33:05.952302Z"
     }
    },
    "source": [
@@ -610,12 +623,12 @@
        "np.float64(2.5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -628,8 +641,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:46:59.834541Z",
-     "start_time": "2025-10-12T12:46:59.737329Z"
+     "end_time": "2025-10-30T15:33:06.066850Z",
+     "start_time": "2025-10-30T15:33:05.973495Z"
     }
    },
    "source": [
@@ -637,14 +650,14 @@
     "r = np.random.rand(10000000)"
    ],
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 24
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:47:15.800288Z",
-     "start_time": "2025-10-12T12:47:05.275127Z"
+     "end_time": "2025-10-30T15:33:12.403780Z",
+     "start_time": "2025-10-30T15:33:06.074449Z"
     }
    },
    "source": [
@@ -660,18 +673,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.31 s ± 66.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "787 ms ± 16.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 25
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T12:47:35.532196Z",
-     "start_time": "2025-10-12T12:47:24.890482Z"
+     "end_time": "2025-10-30T15:33:18.565753Z",
+     "start_time": "2025-10-30T15:33:12.454798Z"
     }
    },
    "source": [
@@ -684,11 +697,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.1 ms ± 52.8 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "7.48 ms ± 218 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -722,8 +735,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T15:00:43.116757Z",
-     "start_time": "2025-10-12T15:00:43.111338Z"
+     "end_time": "2025-10-30T15:33:18.622843Z",
+     "start_time": "2025-10-30T15:33:18.614448Z"
     }
    },
    "source": [
@@ -754,7 +767,7 @@
      ]
     }
    ],
-   "execution_count": 104
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -776,8 +789,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T14:43:20.184827Z",
-     "start_time": "2025-10-12T14:43:20.180494Z"
+     "end_time": "2025-10-30T15:33:18.645364Z",
+     "start_time": "2025-10-30T15:33:18.640657Z"
     }
    },
    "source": "np.argmin(start_years)\n",
@@ -788,19 +801,19 @@
        "np.int64(17)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 87
+   "execution_count": 28
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T14:42:03.585208Z",
-     "start_time": "2025-10-12T14:42:03.580547Z"
+     "end_time": "2025-10-30T15:33:18.669246Z",
+     "start_time": "2025-10-30T15:33:18.663026Z"
     }
    },
    "source": [
@@ -813,19 +826,19 @@
        "np.str_('London')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 84
+   "execution_count": 29
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T14:42:05.366371Z",
-     "start_time": "2025-10-12T14:42:05.360914Z"
+     "end_time": "2025-10-30T15:33:18.698072Z",
+     "start_time": "2025-10-30T15:33:18.689122Z"
     }
    },
    "source": [
@@ -838,12 +851,12 @@
        "array([['Germany']], dtype='<U32')"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 85
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -854,12 +867,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-30T15:33:18.966292Z",
+     "start_time": "2025-10-30T15:33:18.957758Z"
+    }
+   },
    "source": [
     "names == 'Munich'"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False,  True, False, False, False,\n",
+       "       False])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -879,8 +910,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T14:46:45.159699Z",
-     "start_time": "2025-10-12T14:46:45.155248Z"
+     "end_time": "2025-10-30T15:33:19.113101Z",
+     "start_time": "2025-10-30T15:33:19.102510Z"
     }
    },
    "source": [
@@ -894,19 +925,19 @@
        "array(['Germany'], dtype='<U32')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 90
+   "execution_count": 32
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T14:46:55.422187Z",
-     "start_time": "2025-10-12T14:46:55.416723Z"
+     "end_time": "2025-10-30T15:33:19.145606Z",
+     "start_time": "2025-10-30T15:33:19.138079Z"
     }
    },
    "source": [
@@ -920,12 +951,12 @@
        "       'Cincinnati', 'Madrid', 'London', 'Tokyo'], dtype='<U32')"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 91
+   "execution_count": 33
   },
   {
    "cell_type": "markdown",
@@ -941,8 +972,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T14:47:26.906778Z",
-     "start_time": "2025-10-12T14:47:26.902766Z"
+     "end_time": "2025-10-30T15:33:19.168954Z",
+     "start_time": "2025-10-30T15:33:19.162355Z"
     }
    },
    "source": [
@@ -959,12 +990,12 @@
        "       'Madrid', 'London', 'Tokyo'], dtype='<U32')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 92
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
@@ -987,8 +1018,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T14:52:17.502989Z",
-     "start_time": "2025-10-12T14:52:17.498568Z"
+     "end_time": "2025-10-30T15:33:19.206710Z",
+     "start_time": "2025-10-30T15:33:19.200057Z"
     }
    },
    "source": [
@@ -1003,12 +1034,12 @@
        "array(['Seoul', 'Madrid', 'London'], dtype='<U32')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 100
+   "execution_count": 35
   },
   {
    "cell_type": "markdown",
