updated Mindestanforderungen2_Moritz.ipynb worked on Mindestanforderungen3_Moritz.ipynb

--- a/project/Mindestanforderungen3_Moritz.ipynb
+++ b/project/Mindestanforderungen3_Moritz.ipynb
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T08:42:22.292625Z",
-     "start_time": "2025-11-10T08:42:19.999250Z"
+     "end_time": "2025-11-10T09:28:50.670087Z",
+     "start_time": "2025-11-10T09:28:48.255774Z"
     }
    },
    "cell_type": "code",
@@ -26,8 +26,7 @@
     "df = pd.read_csv(\"survey_results_public.csv\", index_col=\"ResponseId\")\n",
     "df = df.drop(columns=df.columns[df.columns.str.startswith('SO')])\n",
     "df[\"EdLevel\"] = df[\"EdLevel\"].str.split(\"(\").str[0].str.strip()\n",
-    "\n",
-    "df"
+    "\n"
    ],
    "id": "eec8c0461846282d",
    "outputs": [
@@ -555,20 +554,145 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 42
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-10T09:33:15.579478Z",
+     "start_time": "2025-11-10T09:33:15.546789Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "source": "df.pivot_table(index=['Country', 'EdLevel'], values=[\"Age\"] , aggfunc=\"count\", dropna=True)",
+   "id": "7fe818cd26043219",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                                                Age\n",
+       "Country     EdLevel                                                \n",
+       "Afghanistan Bachelor’s degree                                     5\n",
+       "            Master’s degree                                       2\n",
+       "            Primary/elementary school                             1\n",
+       "            Professional degree                                   1\n",
+       "            Secondary school                                      1\n",
+       "...                                                             ...\n",
+       "Zambia      Secondary school                                      1\n",
+       "            Some college/university study without earning a...    2\n",
+       "Zimbabwe    Bachelor’s degree                                     7\n",
+       "            Master’s degree                                       4\n",
+       "            Some college/university study without earning a...    2\n",
+       "\n",
+       "[903 rows x 1 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th>EdLevel</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Afghanistan</th>\n",
+       "      <th>Bachelor’s degree</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Master’s degree</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Primary/elementary school</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Professional degree</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Secondary school</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Zambia</th>\n",
+       "      <th>Secondary school</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Some college/university study without earning a degree</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Zimbabwe</th>\n",
+       "      <th>Bachelor’s degree</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Master’s degree</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Some college/university study without earning a degree</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>903 rows × 1 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 55
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-10T09:27:32.408686Z",
+     "start_time": "2025-11-10T09:27:32.405171Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "7fe818cd26043219"
+   "id": "a07b16c7fd8cedf8",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
